Rerun cells with new versions test.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -634,8 +634,8 @@
     }
    ],
    "source": [
-    "taxis.loc[:, ['pickup', 'dropoff']] = \\\n",
-    "    taxis.loc[:, ['pickup', 'dropoff']].apply(pd.to_datetime)\n",
+    "taxis[['pickup', 'dropoff']] = \\\n",
+    "    taxis[['pickup', 'dropoff']].apply(pd.to_datetime)\n",
     "taxis.dtypes"
    ]
   },
@@ -5969,7 +5969,7 @@
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
-       "      <dc:title>Matplotlib v3.5.1, https://matplotlib.org/</dc:title>\n",
+       "      <dc:title>Matplotlib v3.6.3, https://matplotlib.org/</dc:title>\n",
        "     </cc:Agent>\n",
        "    </dc:creator>\n",
        "   </cc:Work>\n",
@@ -6010,7 +6010,7 @@
        "     </g>\n",
        "     <g id=\"text_1\">\n",
        "      <!-- 2020-01 -->\n",
-       "      <g transform=\"translate(22.789156 291.797971)rotate(-30)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(22.789156 291.797971) rotate(-30) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-32\" d=\"M 1228 531 \n",
        "L 3431 531 \n",
@@ -6097,7 +6097,7 @@
        "     </g>\n",
        "     <g id=\"text_2\">\n",
        "      <!-- 2020-03 -->\n",
-       "      <g transform=\"translate(76.157027 291.797971)rotate(-30)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(76.157027 291.797971) rotate(-30) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-33\" d=\"M 2597 2516 \n",
        "Q 3050 2419 3304 2112 \n",
@@ -6150,7 +6150,7 @@
        "     </g>\n",
        "     <g id=\"text_3\">\n",
        "      <!-- 2020-05 -->\n",
-       "      <g transform=\"translate(130.414362 291.797971)rotate(-30)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(130.414362 291.797971) rotate(-30) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-35\" d=\"M 691 4666 \n",
        "L 3169 4666 \n",
@@ -6196,7 +6196,7 @@
        "     </g>\n",
        "     <g id=\"text_4\">\n",
        "      <!-- 2020-07 -->\n",
-       "      <g transform=\"translate(184.671697 291.797971)rotate(-30)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(184.671697 291.797971) rotate(-30) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-37\" d=\"M 525 4666 \n",
        "L 3525 4666 \n",
@@ -6227,7 +6227,7 @@
        "     </g>\n",
        "     <g id=\"text_5\">\n",
        "      <!-- 2020-09 -->\n",
-       "      <g transform=\"translate(239.818496 291.797971)rotate(-30)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(239.818496 291.797971) rotate(-30) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-39\" d=\"M 703 97 \n",
        "L 703 672 \n",
@@ -6278,7 +6278,7 @@
        "     </g>\n",
        "     <g id=\"text_6\">\n",
        "      <!-- 2020-11 -->\n",
-       "      <g transform=\"translate(294.075831 291.797971)rotate(-30)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(294.075831 291.797971) rotate(-30) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-32\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-30\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-32\" x=\"127.246094\"/>\n",
@@ -6297,7 +6297,7 @@
        "     </g>\n",
        "     <g id=\"text_7\">\n",
        "      <!-- 2021-01 -->\n",
-       "      <g transform=\"translate(348.333166 291.797971)rotate(-30)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(348.333166 291.797971) rotate(-30) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-32\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-30\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-32\" x=\"127.246094\"/>\n",
@@ -6310,7 +6310,7 @@
        "    </g>\n",
        "    <g id=\"text_8\">\n",
        "     <!-- date -->\n",
-       "     <g transform=\"translate(211.06625 305.197471)scale(0.1 -0.1)\">\n",
+       "     <g transform=\"translate(211.06625 305.197471) scale(0.1 -0.1)\">\n",
        "      <defs>\n",
        "       <path id=\"DejaVuSans-64\" d=\"M 2906 2969 \n",
        "L 2906 4863 \n",
@@ -6439,7 +6439,7 @@
        "     </g>\n",
        "     <g id=\"text_9\">\n",
        "      <!-- 0.0 -->\n",
-       "      <g transform=\"translate(20.878125 258.170709)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 258.170709) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-2e\" d=\"M 684 794 \n",
        "L 1344 794 \n",
@@ -6463,7 +6463,7 @@
        "     </g>\n",
        "     <g id=\"text_10\">\n",
        "      <!-- 0.5 -->\n",
-       "      <g transform=\"translate(20.878125 214.030447)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 214.030447) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-30\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-35\" x=\"95.410156\"/>\n",
@@ -6478,7 +6478,7 @@
        "     </g>\n",
        "     <g id=\"text_11\">\n",
        "      <!-- 1.0 -->\n",
-       "      <g transform=\"translate(20.878125 169.890185)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 169.890185) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-31\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-30\" x=\"95.410156\"/>\n",
@@ -6493,7 +6493,7 @@
        "     </g>\n",
        "     <g id=\"text_12\">\n",
        "      <!-- 1.5 -->\n",
-       "      <g transform=\"translate(20.878125 125.749923)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 125.749923) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-31\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-35\" x=\"95.410156\"/>\n",
@@ -6508,7 +6508,7 @@
        "     </g>\n",
        "     <g id=\"text_13\">\n",
        "      <!-- 2.0 -->\n",
-       "      <g transform=\"translate(20.878125 81.60966)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 81.60966) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-32\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-30\" x=\"95.410156\"/>\n",
@@ -6523,7 +6523,7 @@
        "     </g>\n",
        "     <g id=\"text_14\">\n",
        "      <!-- 2.5 -->\n",
-       "      <g transform=\"translate(20.878125 37.469398)scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 37.469398) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-32\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-35\" x=\"95.410156\"/>\n",
@@ -6532,7 +6532,7 @@
        "    </g>\n",
        "    <g id=\"text_15\">\n",
        "     <!-- travelers -->\n",
-       "     <g transform=\"translate(14.798438 162.063531)rotate(-90)scale(0.1 -0.1)\">\n",
+       "     <g transform=\"translate(14.798438 162.063531) rotate(-90) scale(0.1 -0.1)\">\n",
        "      <defs>\n",
        "       <path id=\"DejaVuSans-72\" d=\"M 2631 2963 \n",
        "Q 2534 3019 2420 3045 \n",
@@ -6613,7 +6613,7 @@
        "    </g>\n",
        "    <g id=\"text_16\">\n",
        "     <!-- 1e6 -->\n",
-       "     <g transform=\"translate(43.78125 19.318125)scale(0.1 -0.1)\">\n",
+       "     <g transform=\"translate(43.78125 19.318125) scale(0.1 -0.1)\">\n",
        "      <defs>\n",
        "       <path id=\"DejaVuSans-36\" d=\"M 2113 2584 \n",
        "Q 1688 2584 1439 2293 \n",
@@ -7439,7 +7439,7 @@
        "   </g>\n",
        "   <g id=\"text_17\">\n",
        "    <!-- 2020 TSA Traveler Throughput -->\n",
-       "    <g transform=\"translate(130.820625 16.318125)scale(0.12 -0.12)\">\n",
+       "    <g transform=\"translate(130.820625 16.318125) scale(0.12 -0.12)\">\n",
        "     <defs>\n",
        "      <path id=\"DejaVuSans-20\" transform=\"scale(0.015625)\"/>\n",
        "      <path id=\"DejaVuSans-54\" d=\"M -19 4666 \n",
@@ -7675,7 +7675,7 @@
        "    </g>\n",
        "    <g id=\"text_18\">\n",
        "     <!-- travelers -->\n",
-       "     <g transform=\"translate(340.448125 38.916562)scale(0.1 -0.1)\">\n",
+       "     <g transform=\"translate(340.448125 38.916562) scale(0.1 -0.1)\">\n",
        "      <use xlink:href=\"#DejaVuSans-74\"/>\n",
        "      <use xlink:href=\"#DejaVuSans-72\" x=\"39.208984\"/>\n",
        "      <use xlink:href=\"#DejaVuSans-61\" x=\"80.322266\"/>\n",
@@ -7695,7 +7695,7 @@
        "    </g>\n",
        "    <g id=\"text_19\">\n",
        "     <!-- 7D MA -->\n",
-       "     <g transform=\"translate(340.448125 53.594688)scale(0.1 -0.1)\">\n",
+       "     <g transform=\"translate(340.448125 53.594688) scale(0.1 -0.1)\">\n",
        "      <defs>\n",
        "       <path id=\"DejaVuSans-44\" d=\"M 1259 4147 \n",
        "L 1259 519 \n",
@@ -7748,7 +7748,7 @@
        "    </g>\n",
        "    <g id=\"text_20\">\n",
        "     <!-- YTD mean -->\n",
-       "     <g transform=\"translate(340.448125 68.272812)scale(0.1 -0.1)\">\n",
+       "     <g transform=\"translate(340.448125 68.272812) scale(0.1 -0.1)\">\n",
        "      <defs>\n",
        "       <path id=\"DejaVuSans-59\" d=\"M -13 4666 \n",
        "L 666 4666 \n",
@@ -7915,7 +7915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
