Switch ncol to ncols for legend().

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -2268,7 +2268,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x104f4ae50>"
+       "<matplotlib.legend.Legend at 0x13819ebd0>"
       ]
      },
      "execution_count": 5,
@@ -3679,7 +3679,7 @@
     "ax.yaxis.set_major_formatter(ticker.EngFormatter())\n",
     "\n",
     "# customize the legend\n",
-    "ax.legend(title='', loc='center', bbox_to_anchor=(0.5, -0.3), ncol=3, frameon=False)"
+    "ax.legend(title='', loc='center', bbox_to_anchor=(0.5, -0.3), ncols=3, frameon=False)"
    ]
   },
   {
@@ -5404,7 +5404,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1478c5910>"
+       "<seaborn.axisgrid.FacetGrid at 0x138338e90>"
       ]
      },
      "execution_count": 11,
