--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -2300,7 +2300,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12895ddd0>"
+       "<matplotlib.legend.Legend at 0x11f349c90>"
       ]
      },
      "execution_count": 5,
@@ -3711,7 +3711,7 @@
     "ax.yaxis.set_major_formatter(ticker.EngFormatter())\n",
     "\n",
     "# customize the legend\n",
-    "ax.legend(title='', loc='center', bbox_to_anchor=(0.5, -0.3), ncol=3, frameon=False)"
+    "ax.legend(title='', loc='center', bbox_to_anchor=(0.5, -0.3), ncols=3, frameon=False)"
    ]
   },
   {
@@ -6564,7 +6564,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1606ada90>"
+       "<seaborn.axisgrid.FacetGrid at 0x16aa00650>"
       ]
      },
      "execution_count": 11,
