Remove inplace argument everywhere.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -518,27 +518,13 @@
     }
    ],
    "source": [
-    "taxis.rename(\n",
+    "taxis = taxis.rename(\n",
     "    columns={\n",
     "        'tpep_pickup_datetime': 'pickup', \n",
     "        'tpep_dropoff_datetime': 'dropoff'\n",
-    "    },\n",
-    "    inplace=True\n",
+    "    }\n",
     ")\n",
     "taxis.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5c28403d-34f9-4c9c-a61e-3ad43a30e0dc",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Important**: This operation was performed in-place &ndash; be careful with in-place operations."
    ]
   },
   {
@@ -1440,7 +1426,7 @@
     }
    ],
    "source": [
-    "taxis.set_index('pickup', inplace=True)\n",
+    "taxis = taxis.set_index('pickup')\n",
     "taxis.head(3)"
    ]
   },
@@ -1464,7 +1450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "taxis.sort_index(inplace=True)"
+    "taxis = taxis.sort_index()"
    ]
   },
   {
@@ -2033,7 +2019,7 @@
     }
    ],
    "source": [
-    "taxis.reset_index(inplace=True)\n",
+    "taxis = taxis.reset_index()\n",
     "taxis.head()"
    ]
   },
@@ -4594,8 +4580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "taxis.set_index('dropoff', inplace=True)\n",
-    "taxis.sort_index(inplace=True)"
+    "taxis = taxis.set_index('dropoff').sort_index()"
    ]
   },
   {
@@ -5392,7 +5377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsa_melted_holiday_travel.set_index('date', inplace=True)"
+    "tsa_melted_holiday_travel = tsa_melted_holiday_travel.set_index('date')"
    ]
   },
   {
