--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -550,27 +550,13 @@
     }
    ],
    "source": [
-    "taxis.rename(\n",
+    "taxis = taxis.rename(\n",
     "    columns={\n",
     "        'tpep_pickup_datetime': 'pickup', \n",
     "        'tpep_dropoff_datetime': 'dropoff'\n",
-    "    },\n",
-    "    inplace=True\n",
+    "    }\n",
     ")\n",
     "taxis.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6a822aa-c9cc-474e-afff-057d456f6fc3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Important**: This operation was performed in-place &ndash; be careful with in-place operations."
    ]
   },
   {
@@ -1639,7 +1625,7 @@
     }
    ],
    "source": [
-    "taxis.set_index('pickup', inplace=True)\n",
+    "taxis = taxis.set_index('pickup')\n",
     "taxis.head(3)"
    ]
   },
@@ -1665,7 +1651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "taxis.sort_index(inplace=True)"
+    "taxis = taxis.sort_index()"
    ]
   },
   {
@@ -2238,7 +2224,7 @@
     }
    ],
    "source": [
-    "taxis.reset_index(inplace=True)\n",
+    "taxis = taxis.reset_index()\n",
     "taxis.head()"
    ]
   },
@@ -5452,8 +5438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "taxis.set_index('dropoff', inplace=True)\n",
-    "taxis.sort_index(inplace=True)"
+    "taxis = taxis.set_index('dropoff').sort_index()"
    ]
   },
   {
@@ -6254,7 +6239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsa_melted_holiday_travel.set_index('date', inplace=True)"
+    "tsa_melted_holiday_travel = tsa_melted_holiday_travel.set_index('date')"
    ]
   },
   {
