Add comment about right-skew in mass distribution.

--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -2449,7 +2449,7 @@
      "slide_type": "subslide"
     },
     "tags": [
-     "id_quantiles"
+     "id_mean"
     ]
    },
    "source": [
@@ -2465,7 +2465,7 @@
     {
      "data": {
       "text/plain": [
-       "32.6"
+       "13278.078548601512"
       ]
      },
      "execution_count": 25,
@@ -2474,12 +2474,12 @@
     }
    ],
    "source": [
-    "meteorites['mass (g)'].median()"
+    "meteorites['mass (g)'].mean()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9e481f20-d1b2-47e4-8f84-c83df89cab82",
+   "id": "91b223c6-e174-4b8c-89ec-dc4538f36873",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2487,7 +2487,22 @@
     "tags": []
    },
    "source": [
-    "We can take this a step further and look at quantiles:"
+    "**Important**: The mean isn't always the best measure of central tendency. If there are outliers in the distribution, the mean will be skewed. Here, the mean is being pulled higher by some very heavy meteorites &ndash; the distribution is right-skewed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7da8f8d-2838-4f3a-a011-1623c16b5c30",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": [
+     "id_quantiles"
+    ]
+   },
+   "source": [
+    "Taking a look at some quantiles at the extremes of the distribution shows that the mean is between the 95th and 99th percentile of the distribution, so it isn't a good measure of central tendency here:"
    ]
   },
   {
@@ -2501,6 +2516,7 @@
       "text/plain": [
        "0.01        0.44\n",
        "0.05        1.10\n",
+       "0.50       32.60\n",
        "0.95     4000.00\n",
        "0.99    50600.00\n",
        "Name: mass (g), dtype: float64"
@@ -2512,7 +2528,41 @@
     }
    ],
    "source": [
-    "meteorites['mass (g)'].quantile([0.01, 0.05, 0.95, 0.99])"
+    "meteorites['mass (g)'].quantile([0.01, 0.05, 0.5, 0.95, 0.99])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ba56ba7-cb62-46a1-81b6-5117a2210460",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "A better measure in this case is the median (50th percentile), since it is robust to outliers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4aca7862-5a00-4f9e-88d8-004c6d680e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.6"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meteorites['mass (g)'].median()"
    ]
   },
   {
@@ -2532,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "35cd0108-7ef5-4911-bc6d-56249dff6b42",
    "metadata": {},
    "outputs": [
@@ -2542,7 +2592,7 @@
        "60000000.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2566,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "edf8ab72-ba40-4eb9-9015-37c0d60ef86d",
    "metadata": {},
    "outputs": [
@@ -2586,7 +2636,7 @@
        "Name: 16392, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2630,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "0301e74e-bdfd-4b9f-bf26-edd0c3ad5f39",
    "metadata": {},
    "outputs": [
@@ -2640,7 +2690,7 @@
        "466"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2664,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "5ad8d82a-aeaf-4d8b-bf5f-22b2ba06fad3",
    "metadata": {},
    "outputs": [
@@ -2676,7 +2726,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2711,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "7bbf2092-31bd-4473-a98c-cfe243f9e7b1",
    "metadata": {},
    "outputs": [
@@ -2924,7 +2974,7 @@
        "max                        NaN     81.166670    354.473330         NaN  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3010,7 +3060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "0f348a93-32c6-474c-acf9-c4fd1a80aa26",
    "metadata": {},
    "outputs": [
@@ -3114,7 +3164,7 @@
        "max      176.000000     43.000000    612.000000    671.800000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3143,7 +3193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "14059a98-6ddf-417d-98fa-cd5f36130e03",
    "metadata": {},
    "outputs": [
@@ -3157,7 +3207,7 @@
        "Name: 8338, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
