Add data morph panda to star example to motivate section 3.

--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -41,6 +41,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00effe5c-5461-44dd-9c2c-9e2ed6e42481",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Learning Path\n",
+    "\n",
+    "1. **Why is data visualization necessary?**\n",
+    "1. Plotting with pandas\n",
+    "1. Plotting with Seaborn\n",
+    "1. Customizing plots with Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9f34c93-4ca5-4893-b02a-ba1844432576",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Why is data visualization necessary?\n",
+    "\n",
+    "So far, we have focused a lot on summarizing the data using statistics. However, summary statistics are not enough to understand the distribution &ndash; there are many possible distributions for a given set of summary statistics. Data visualization is necessary to truly understand the distribution:\n",
+    "\n",
+    "<div style=\"text-align: center; margin-top: -10px;\">\n",
+    "<img width=\"50%\" src=\"https://raw.githubusercontent.com/stefmolin/data-morph/main/docs/_static/panda-to-star-eased.gif\" alt=\"Data Morph: panda to star\" style=\"min-width: 300px; margin-bottom: -10px;\"/>\n",
+    "<div style=\"margin: auto 26%;\"><small><em>A set of points forming a panda can also form a star without any significant changes to the summary statistics displayed above. (source: <a href=\"https://github.com/stefmolin/data-morph\">Data Morph</a>)</em></small></div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bed5ec02-0cbf-4378-bb63-33e0d4e2eb30",
    "metadata": {
     "slideshow": {
@@ -51,9 +89,10 @@
    "source": [
     "## Learning Path\n",
     "\n",
+    "1. Why is data visualization necessary?\n",
     "1. **Plotting with pandas**\n",
-    "2. Plotting with Seaborn\n",
-    "3. Customizing plots with Matplotlib"
+    "1. Plotting with Seaborn\n",
+    "1. Customizing plots with Matplotlib"
    ]
   },
   {
@@ -6516,9 +6555,10 @@
    "source": [
     "## Learning Path\n",
     "\n",
+    "1. Why is data visualization necessary?\n",
     "1. Plotting with pandas\n",
-    "2. **Plotting with Seaborn**\n",
-    "3. Customizing plots with Matplotlib"
+    "1. **Plotting with Seaborn**\n",
+    "1. Customizing plots with Matplotlib"
    ]
   },
   {
@@ -12865,9 +12905,10 @@
    "source": [
     "## Learning Path\n",
     "\n",
+    "1. Why is data visualization necessary?\n",
     "1. Plotting with pandas\n",
-    "2. Plotting with Seaborn\n",
-    "3. **Customizing plots with Matplotlib**"
+    "1. Plotting with Seaborn\n",
+    "1. **Customizing plots with Matplotlib**"
    ]
   },
   {
