Tweaks for version bumps.

--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -158,8 +158,8 @@
        "</div>"
       ],
       "text/plain": [
-       "       name   id nametype     recclass  mass (g)  fall  \\\n",
-       "0    Aachen    1    Valid           L5        21  Fell   \n",
+       "       name   id nametype     recclass  mass (g)  fall   \n",
+       "0    Aachen    1    Valid           L5        21  Fell  \\\n",
        "1    Aarhus    2    Valid           H6       720  Fell   \n",
        "2      Abee    6    Valid          EH4    107000  Fell   \n",
        "3  Acapulco   10    Valid  Acapulcoite      1914  Fell   \n",
@@ -504,13 +504,13 @@
        "</div>"
       ],
       "text/plain": [
-       "     name id nametype recclass    mass  fall                     year  \\\n",
-       "0  Aachen  1    Valid       L5      21  Fell  1880-01-01T00:00:00.000   \n",
+       "     name id nametype recclass    mass  fall                     year   \n",
+       "0  Aachen  1    Valid       L5      21  Fell  1880-01-01T00:00:00.000  \\\n",
        "1  Aarhus  2    Valid       H6     720  Fell  1951-01-01T00:00:00.000   \n",
        "2    Abee  6    Valid      EH4  107000  Fell  1952-01-01T00:00:00.000   \n",
        "\n",
-       "      reclat      reclong                                        geolocation  \\\n",
-       "0  50.775000     6.083330     {'latitude': '50.775', 'longitude': '6.08333'}   \n",
+       "      reclat      reclong                                        geolocation   \n",
+       "0  50.775000     6.083330     {'latitude': '50.775', 'longitude': '6.08333'}  \\\n",
        "1  56.183330    10.233330  {'latitude': '56.18333', 'longitude': '10.23333'}   \n",
        "2  54.216670  -113.000000    {'latitude': '54.21667', 'longitude': '-113.0'}   \n",
        "\n",
@@ -809,8 +809,8 @@
        "</div>"
       ],
       "text/plain": [
-       "       name   id nametype     recclass  mass (g)  fall  \\\n",
-       "0    Aachen    1    Valid           L5      21.0  Fell   \n",
+       "       name   id nametype     recclass  mass (g)  fall   \n",
+       "0    Aachen    1    Valid           L5      21.0  Fell  \\\n",
        "1    Aarhus    2    Valid           H6     720.0  Fell   \n",
        "2      Abee    6    Valid          EH4  107000.0  Fell   \n",
        "3  Acapulco   10    Valid  Acapulcoite    1914.0  Fell   \n",
@@ -958,8 +958,8 @@
        "</div>"
       ],
       "text/plain": [
-       "             name     id nametype              recclass  mass (g)   fall  \\\n",
-       "45711  Zillah 002  31356    Valid               Eucrite     172.0  Found   \n",
+       "             name     id nametype              recclass  mass (g)   fall   \n",
+       "45711  Zillah 002  31356    Valid               Eucrite     172.0  Found  \\\n",
        "45712      Zinder  30409    Valid  Pallasite, ungrouped      46.0  Found   \n",
        "45713        Zlin  30410    Valid                    H4       3.3  Found   \n",
        "45714   Zubkovsky  31357    Valid                    L6    2167.0  Found   \n",
@@ -1380,8 +1380,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              name     id nametype       recclass  mass (g)  fall  \\\n",
-       "100         Benton   5026    Valid            LL6    2840.0  Fell   \n",
+       "              name     id nametype       recclass  mass (g)  fall   \n",
+       "100         Benton   5026    Valid            LL6    2840.0  Fell  \\\n",
        "101         Berduc  48975    Valid             L6     270.0  Fell   \n",
        "102         Béréba   5028    Valid  Eucrite-mmict   18000.0  Fell   \n",
        "103  Berlanguillas   5029    Valid             L6    1440.0  Fell   \n",
@@ -1794,8 +1794,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              name     id nametype    recclass    mass (g)  fall  \\\n",
-       "29         Allende   2278    Valid         CV3   2000000.0  Fell   \n",
+       "              name     id nametype    recclass    mass (g)  fall   \n",
+       "29         Allende   2278    Valid         CV3   2000000.0  Fell  \\\n",
        "419          Jilin  12171    Valid          H5   4000000.0  Fell   \n",
        "506  Kunya-Urgench  12379    Valid          H5   1100000.0  Fell   \n",
        "707  Norton County  17922    Valid     Aubrite   1100000.0  Fell   \n",
@@ -1954,8 +1954,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              name     id nametype    recclass    mass (g)  fall  \\\n",
-       "29         Allende   2278    Valid         CV3   2000000.0  Fell   \n",
+       "              name     id nametype    recclass    mass (g)  fall   \n",
+       "29         Allende   2278    Valid         CV3   2000000.0  Fell  \\\n",
        "419          Jilin  12171    Valid          H5   4000000.0  Fell   \n",
        "506  Kunya-Urgench  12379    Valid          H5   1100000.0  Fell   \n",
        "707  Norton County  17922    Valid     Aubrite   1100000.0  Fell   \n",
@@ -2028,9 +2028,10 @@
     {
      "data": {
       "text/plain": [
+       "fall\n",
        "Found    44609\n",
        "Fell      1107\n",
-       "Name: fall, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 24,
@@ -2533,8 +2534,8 @@
        "</div>"
       ],
       "text/plain": [
-       "          name            id nametype recclass      mass (g)   fall  \\\n",
-       "count    45716  45716.000000    45716    45716  4.558500e+04  45716   \n",
+       "          name            id nametype recclass      mass (g)   fall   \n",
+       "count    45716  45716.000000    45716    45716  4.558500e+04  45716  \\\n",
        "unique   45716           NaN        2      466           NaN      2   \n",
        "top     Aachen           NaN    Valid       L6           NaN  Found   \n",
        "freq         1           NaN    45641     8285           NaN  44609   \n",
@@ -2660,7 +2661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
