Incorporate the outro slide.

--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -73,19 +73,61 @@
      "slide_type": "slide"
     },
     "tags": [
-     "id_fin"
+     "id_related-content"
     ]
    },
    "source": [
-    "# Thank you!\n",
+    "# Related content\n",
     "\n",
-    "*I hope you enjoyed the workshop. Note that all the examples were developed exclusively for this workshop &ndash; check out [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) and my [Beyond the Basics: Data Visualization in Python](https://github.com/stefmolin/python-data-viz-workshop) workshop for more.*\n",
+    "*All examples herein were developed exclusively for this workshop &ndash; check out [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) and my [Beyond the Basics: Data Visualization in Python](https://github.com/stefmolin/python-data-viz-workshop) workshop for more.*\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <img width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\" style=\"min-width: 200px\">\n",
     "    <div><small>\n",
     "        <a href=\"https://linktr.ee/stefaniemolin\">linktr.ee/stefaniemolin</a>\n",
     "    </small></div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f37ebbc-a5f8-4a61-8a18-c74528ee1220",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Thank you!\n",
+    "\n",
+    "*I hope you enjoyed the session. You can follow my work on the following platforms:*\n",
+    "\n",
+    "<div style=\"margin-left: 20px;\">\n",
+    "    <p>\n",
+    "        <i class=\"fab fa-github-square fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
+    "      <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://github.com/stefmolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
+    "        github.com/stefmolin\n",
+    "      </a>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "        <i class=\"fab fa-twitter-square fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
+    "        <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://twitter.com/StefanieMolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
+    "        twitter.com/StefanieMolin                      \n",
+    "        </a>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "        <i class=\"fab fa-medium fa-2x\" style=\"position: relative; top: 3px;\"></i>\n",
+    "      <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://medium.com/@stefaniemolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
+    "         medium.com/@stefaniemolin                   \n",
+    "      </a>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "        <i class=\"fab fa-linkedin fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
+    "        <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://linkedin.com/in/stefanie-molin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
+    "         linkedin.com/in/stefanie-molin\n",
+    "        </a>\n",
+    "    </p>\n",
     "</div>"
    ]
   }
@@ -106,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
