Resize outro slide.

--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -103,27 +103,27 @@
     "\n",
     "*I hope you enjoyed the session. You can follow my work on the following platforms:*\n",
     "\n",
-    "<div style=\"margin-left: 20px;\">\n",
+    "<div style=\"margin-left: 20px; font-size: 80%;\">\n",
     "    <p>\n",
-    "        <i class=\"fab fa-github-square fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
+    "        <i class=\"fab fa-github-square fa-2x\" style=\"position: relative; top: 1px;\"></i>\n",
     "      <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://github.com/stefmolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
     "        github.com/stefmolin\n",
     "      </a>\n",
     "    </p>\n",
     "    <p>\n",
-    "        <i class=\"fab fa-twitter-square fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
+    "        <i class=\"fab fa-twitter-square fa-2x\" style=\"position: relative; top: 1px;\"></i>\n",
     "        <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://twitter.com/StefanieMolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
     "        twitter.com/StefanieMolin                      \n",
     "        </a>\n",
     "    </p>\n",
     "    <p>\n",
-    "        <i class=\"fab fa-medium fa-2x\" style=\"position: relative; top: 3px;\"></i>\n",
+    "        <i class=\"fab fa-medium fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
     "      <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://medium.com/@stefaniemolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
     "         medium.com/@stefaniemolin                   \n",
     "      </a>\n",
     "    </p>\n",
     "    <p>\n",
-    "        <i class=\"fab fa-linkedin fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
+    "        <i class=\"fab fa-linkedin fa-2x\"></i>\n",
     "        <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://linkedin.com/in/stefanie-molin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
     "         linkedin.com/in/stefanie-molin\n",
     "        </a>\n",
