--- a/slides/5-outro.ipynb
+++ b/slides/5-outro.ipynb
@@ -21,7 +21,7 @@
     "        <img class=\"qr-code\" width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png\">\n",
     "    </div>\n",
     "\n",
-    "<div style=\"flex-basis: 45em; flex-grow: 2;\">\n",
+    "<div style=\"flex-basis: 45em; flex-grow: 2; font-size: 80%;\">\n",
     "    <p>\n",
     "        <i class=\"fab fa-github-square fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
     "      <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://github.com/stefmolin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
@@ -41,7 +41,7 @@
     "      </a>\n",
     "    </p>\n",
     "    <p>\n",
-    "        <i class=\"fab fa-linkedin fa-2x\" style=\"position: relative; top: 2px;\"></i>\n",
+    "        <i class=\"fab fa-linkedin fa-2x\" style=\"position: relative; top: 1px;\"></i>\n",
     "        <a style=\"padding-left: 2px; font-size: 2em;\" href=\"https://linkedin.com/in/stefanie-molin\" target=\"_blank\" rel=\"noopener noreferrer\">\n",
     "         linkedin.com/in/stefanie-molin\n",
     "        </a>\n",
