--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -68,7 +68,7 @@
    },
    "source": [
     "### Prerequisites\n",
-    "Consult the [README](https://github.com/stefmolin/pandas-workshop) for environment setup instructions or use [this](https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab) Binder environment."
+    "Consult the [README](https://github.com/stefmolin/pandas-workshop) for environment setup instructions or use [this](https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab) Binder environment (depending on server availability)."
    ]
   },
   {
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
