Update prerequisites slide.

--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -68,7 +68,8 @@
    },
    "source": [
     "### Prerequisites\n",
-    "Consult the [README](https://github.com/stefmolin/pandas-workshop) for environment setup instructions or use [this](https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab) Binder environment (depending on server availability)."
+    "- To follow along with this workshop, you will need to either configure a local environment or use a cloud solution like GitHub Codespaces. Consult the [README](https://github.com/stefmolin/pandas-workshop#setup-instructions) for step-by-step setup instructions.\n",
+    "- In addition, you should have basic knowledge of Python and be comfortable working in Jupyter Notebooks; if not, check out the resources [here](https://github.com/stefmolin/pandas-workshop#prerequisites) to get up to speed."
    ]
   },
   {
