Fix exercise prompt in section 1 notebook [skip ci]

--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -2622,7 +2622,7 @@
    "source": [
     "### [Exercise 1.4](./workbook.ipynb#Exercise-1.4)\n",
     "\n",
-    "##### Find the dimensions (number of rows and number of columns) in the data."
+    "##### Isolate the `fare_amount`, `tip_amount`, `tolls_amount`, and `total_amount` for the longest trip by distance (`trip_distance`)."
    ]
   },
   {
